tests/negative/runtime/writefile_missing_dir/input.ci
void main() {
    writeFile("no/such/dir/file.txt", "x");
}
